@@ -8,6 +8,9 @@ on October 14, 2001,
 
 *Jikes RVM 2.4.6 Release Notes (future)
 ** Highlights
+*** The recommended version of GNU classpath for Jikes RVM 2.4.5 is 0.92.
+    Earlier versions of GNU classpath are not supported.
+
 *** A large scale restructuring of the source tree was performed 
     to prepare for making it easier to develop Jikes RVM using Eclipse.
     All files except for the Java source to Jikes RVM itself was moved
